# youtube2slackthread

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  SETUP_GUIDE.md  SLACK_COMMANDS.md  Spec.md  config-example.yaml  config.yaml  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml
cookies/: README.md
doc/: Tasks.md  multi-workspace-support.md  reazonspeech-integration.md
docs/: USER_COOKIE_MANAGEMENT.md
nginx/: nginx.conf
scripts/: deploy.sh  download_reazonspeech_model.sh
src/youtube2slack/: __init__.py  __main__.py  cli.py  downloader.py  reazonspeech_stream_processor.py  reazonspeech_transcriber.py  slack_bot_client.py  slack_client.py  slack_server.py  stream_processor.py  user_cookie_manager.py  vad_stream_processor.py  vad_thread_processor.py  web_token_manager.py  web_ui.py  web_ui_templates.py  whisper_transcriber.py  workflow.py  workspace_manager.py  workspace_registry.py
tests/: __init__.py  test_downloader.py  test_reazonspeech_transcriber.py  test_slack.py  test_slack_bot.py  test_slack_server.py  test_stream_processor.py  test_transcriber_factory.py  test_user_cookie_manager.py  test_user_settings_manager.py  test_web_token_manager.py  test_whisper.py  test_workflow.py  test_workflow_permissions.py
